<resources>
    <string name="app_name">SimpleChat</string>
    <string name="long_dummy_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="dummy_name">Name</string>
    <string name="dummy_timestamp">21 Nov 12:32pm</string>
    <string name="refresh_button_name">Refresh</string>
    <string name="send_button_name">Send</string>
    <string name="network_error">Network Error</string>
    <string name="enter_name">Enter name</string>
    <string name="group_name">Group Name</string>
    <string name="login">Login</string>
    <string name="user_group_join_group">Join</string>
    <string name="user_group_create_group">Create</string>
    <string name="unexpected_error_msg">Unexpected Error, Please Try Again</string>
    <string name="invalid_name_error_msg">Please enter a alphanumeric name</string>
    <string name="create_group_success_message">Successfully created the group</string>
    <string name="create_group_failure_message">Group creation failed</string>
    <string name="group_name_cannot_be_empty_message">Group name cannot be empty</string>
    <string name="join_group_success_message">Successfully join the group</string>
    <string name="send_message_successful">Message Send Successfully</string>
    <string name="message_send_failure">Message Send Failed</string>
    <string name="invalid_group_name_error_message">Invalid Group Name, Use only alphanumeric</string>
    <string name="blank_message_warning">Message can\'t be blank</string>
</resources>
