<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/group_message_card_padding"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/group_message_card_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/group_message_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            tools:text="@string/dummy_name"/>

        <TextView
            android:id="@+id/group_message_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="@string/long_dummy_message" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:gravity="end"
            android:paddingEnd="@dimen/group_message_time_end_padding"
            android:paddingStart="@dimen/group_message_time_start_padding"
            tools:text="@string/dummy_timestamp" />

    </LinearLayout>

</android.support.v7.widget.CardView>
