<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/banner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_name_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/banner_text_bottom_margin"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/banner_name_text_size" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/input_name_side_margin"
        android:layout_marginRight="@dimen/input_name_side_margin">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="text"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_name_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_top_margin"
        android:background="@drawable/round_corner_button"
        android:text="@string/login"
        android:textColor="@color/white" />

</RelativeLayout>
