<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvGroupList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edit_text_height"
        android:paddingBottom="@dimen/edit_text_height"
        app:layout_constraintBottom_toTopOf="@id/etGroupName"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etGroupName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginLeft="@dimen/input_name_side_margin"
        android:layout_marginRight="@dimen/input_name_side_margin"
        android:paddingTop="@dimen/input_name_side_margin"
        app:layout_constraintBottom_toTopOf="@id/btnJoinGroup">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_name"
            android:inputType="text"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnJoinGroup"
        android:layout_width="@dimen/zero_dp_variable_constraint"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/user_group_button_half_margin"
        android:layout_marginEnd="@dimen/user_group_button_margin"
        android:layout_marginBottom="@dimen/user_group_button_margin"
        android:text="@string/user_group_join_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCreateGroup"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCreateGroup"
        android:layout_width="@dimen/zero_dp_variable_constraint"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/user_group_button_half_margin"
        android:layout_marginEnd="@dimen/user_group_button_margin"
        android:layout_marginBottom="@dimen/user_group_button_margin"
        android:text="@string/user_group_create_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btnJoinGroup" />

</android.support.constraint.ConstraintLayout>
